# vkbottle-cm

./: .flake8  .gitignore  Dockerfile  README.md  alembic_example.ini  bot-entrypoint.sh  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0819a214e8ce_added_conversation_model.py  13cbbd847b8a_.py  20317f955e85_added_user_model.py  d271b861c94e_create_init_migration.py  d2f3d6f91014_added_user_model.py
config/: __init__.py  db_config.py
src/admin/models/: user.py
src/admin/repositories/: user_repo.py
src/rules/: admin_rule.py
src/utils/: session_handlers.py
